force-app/main/default/objects/Referral.object
<CustomObject>
    <fields>
        <fullName>API_EventDate__c</fullName>
        <formula>If(NOT(ISBLANK( ReferralDate )),

TEXT(YEAR( ReferralDate ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH( ReferralDate )), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY( ReferralDate)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_EventDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Event__c</fullName>
        <formula>TRIM(LEFT(TEXT(Event__c),FIND(&quot;:&quot;, TEXT(Event__c))-1))</formula>
        <label>API_Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ProbSolDivRRResult__c</fullName>
        <formula>TRIM(LEFT(TEXT( ProbSolDivRRResult__c ),FIND(&quot;:&quot;, TEXT( ProbSolDivRRResult__c))-1))</formula>
        <label>API_ProbSolDivRRResult</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ReferralCaseManageAfter__c</fullName>
        <formula>TRIM(LEFT(TEXT(ReferralCaseManageAfter__c),FIND(&quot;:&quot;, TEXT(ReferralCaseManageAfter__c))-1))</formula>
        <label>API_ReferralCaseManageAfter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ReferralResult__c</fullName>
        <formula>TRIM(LEFT(TEXT(ReferralResult__c),FIND(&quot;:&quot;, TEXT( ReferralResult__c))-1))</formula>
        <label>API_ReferralResult</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnrollmentID__c</fullName>
        <formula>Program_Enrollment__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnrollmentID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisEvent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCrisisOrPHHousing__c</fullName>
        <label>Location Crisis Or PH Housing</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalID__c</fullName>
        <formula>Program_Enrollment__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PersonalID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProbSolDivRRResult__c</fullName>
        <label>ProbSolDivRRResult</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>ProgramEnrollment</referenceTo>
        <relationshipLabel>Provided Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferralCaseManageAfter__c</fullName>
        <label>Referral Case Manage After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralResult__c</fullName>
        <label>Referral Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReferralResult</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResultDate__c</fullName>
        <formula>If(NOT(ISBLANK(Result_Date__c)),

TEXT(YEAR( Result_Date__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(Result_Date__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(Result_Date__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ResultDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Date__c</fullName>
        <label>Result Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>HMISEvent</fullName>
        <active>true</active>
        <description>Coordinated Entry Event</description>
        <label>HMIS Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral</fullName>
        <active>true</active>
        <label>Referral</label>
    </recordTypes>
</CustomObject>